Fixed alignment issue in block button

--- a/src/less/components/button.less
+++ b/src/less/components/button.less
@@ -170,7 +170,9 @@
     // --------------------------------------------------
 
     &.btn-block {
-        display: block;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         width: 100%;
     }
 
